--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-CODALAB=https://worksheets.codalab.org
+CODALAB=http://172.17.0.1:8080
+#ip addr
 PORT=8123
 ENV=Production
 MIGRATION=True
 MYSQLDATA=./.mysql-data/db
+SERVERBIN=../codalang-server/.stack-work/install/x86_64-linux/lts-13.27/8.6.5/bin/codalang-server-exe
+FRONTEND=../../bento/
