--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - 443:443
     networks:
       - workflow-network
+    depends_on:
+      - "backend"
     environment:
       - CODALAB=${CODALAB}
       - PORT=${PORT}
