nginx with keep host header

--- a/nginx.conf
+++ b/nginx.conf
@@ -111,6 +111,7 @@ http {
             proxy_pass ${CODALAB};
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $http_host;
+            proxy_set_header Host            $host:$server_port;
             proxy_connect_timeout       1200;
             proxy_send_timeout          1200;
             proxy_read_timeout          1200;
