add demo configuration

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CODALAB=http://172.17.0.1:8083
+CODALAB=https://worksheets.codalab.org/
 #ip addr
 PORT=8123
 ENV=Production
@@ -6,3 +6,4 @@ MIGRATION=True
 MYSQLDATA=./.mysql-data/db
 SERVERBIN=../codalang-server/.stack-work/install/x86_64-linux/lts-13.27/8.6.5/bin/codalang-server-exe
 FRONTEND=../../bento/
+DEMO=True
