--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     command: /bin/bash -c "envsubst '\\\$$PORT \\\$$CODALAB' < /nginx.conf.tmp > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
 
   backend:
-    image: jyh1/workflow:server
+    image: jyh1/workflow:server-demo
     container_name: codalab-worflow-server
     volumes:
       - ${SERVERBIN}:/server-bin
@@ -38,6 +38,7 @@ services:
       - MYSQL_PWD=workflowpw
       - MIGRATION=${MIGRATION}
       - MYSQL_HOST=db
+      - DEMO=${DEMO}
 
   db:
     image: mysql:8
