update for demo

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ MYSQLDATA=./.mysql-data/db
 SERVERBIN=../codalang-server/.stack-work/install/x86_64-linux/lts-13.27/8.6.5/bin/codalang-server-exe
 FRONTEND=../../bento/
 DEMO=True
+DEMOAPPLOC=../../bento/build
