--- a/nginx.conf
+++ b/nginx.conf
@@ -116,6 +116,10 @@ http {
             proxy_send_timeout          1200;
             proxy_read_timeout          1200;
             send_timeout                1200;
+        }
+
+        location /workflowdemo {
+            alias /demo-app;
         }  
 
         error_page 503 /error/503.html;
