add public user option

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - MIGRATION=${MIGRATION}
       - MYSQL_HOST=db
       - DEMO=${DEMO}
+      - PUBLICUSER=${PUBLICUSER}
 
   db:
     image: mysql:8
