--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     command: /bin/bash -c "envsubst '\\\$$PORT \\\$$CODALAB' < /nginx.conf.tmp > /etc/nginx/nginx.conf && exec nginx -g 'daemon off;'"
 
   backend:
-    image: jyh1/workflow:server-demo
+    image: jyh1/workflow:server
     container_name: codalab-worflow-server
     volumes:
       - ${SERVERBIN}:/server-bin
